--- a/index.html
+++ b/index.html
@@ -4,6 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML - Forms - Practice</title>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <form action="">
+      <fieldset>
+        <legend>პირადი ინფორმაცია</legend>
+        <div>
+          <label for="fname">სახელი</label>
+          <input type="text" id="fname" required />
+        </div>
+        <div>
+          <label for="lname">გვარი</label>
+          <input type="text" id="lname" required />
+        </div>
+      </fieldset>
+      <fieldset>
+        <legend>პირადი ინფორმაცია</legend>
+        <div>
+          <label for="fname">სახელი</label>
+          <input type="text" id="fname" required />
+        </div>
+        <div>
+          <label for="lname">გვარი</label>
+          <input type="text" id="lname" required />
+        </div>
+      </fieldset>
+    </form>
+
+    <script src="js/script.js"></script>
+  </body>
 </html>
