--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
           <label for="fname">სახელი</label>
           <input type="text" id="fname" name="fname" required />
         </div>
-        <div>
+        <div class="input-group">
           <label for="lname">გვარი</label>
           <input type="text" id="lname" name="lname" required />
         </div>
-        <div>
+        <div class="input-group">
           <label for="email">ელფოსტა</label>
           <input type="email" id="email" name="email" required />
         </div>
@@ -29,11 +29,11 @@
       <!-- fieldset info 2 -->
       <fieldset>
         <legend>საკონტაქტო ინფორმაცია</legend>
-        <div>
+        <div class="input-group">
           <label for="phone">ტელეფონის ნომერი</label>
           <input type="tel" id="phone" name="phone" />
         </div>
-        <div>
+        <div class="input-group">
           <label for="address">მისამართი</label>
           <input type="text" id="address" name="address" />
         </div>
